cuvanje selekcije napokon odradjeno

--- a/testus2/Main.xaml
+++ b/testus2/Main.xaml
@@ -11,7 +11,9 @@
         WindowStartupLocation="CenterScreen"
         WindowState="Maximized"
         WindowStyle="None"
-        Title="Main" MinHeight="600" MinWidth="800">
+        Title="Main" MinHeight="600" MinWidth="800"
+        Loaded="Window_Loaded">
+        
     <Window.Resources>
         <Style x:Key="_ListBoxItemStyle" TargetType="ListBoxItem">
             <Setter Property="Template">
@@ -33,7 +35,7 @@
             </Setter>
         </Style>
     </Window.Resources>
-    <Grid>
+    <Grid >
         <Grid.Background>
             <ImageBrush ImageSource="/pozadina_projekat.png" TileMode="Tile" Viewport="120,120,120,120" ViewportUnits="Absolute"/>
         </Grid.Background>
@@ -68,17 +70,17 @@
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <Border Name="b1" Grid.Column="0" Grid.Row="0">
-                <Image Source="img/nigerniger.jpg" MouseDown="Ans1_MouseDown" Name="Ans1"  Width="200" Height="80" Stretch="Fill" />
+                <Border BorderBrush="Red" Name="b1" Width="200" Height="80" >
+                    <Image  Grid.Row="0" Grid.Column="0" Source="img/nigerniger.jpg" MouseDown="Ans1_MouseDown" Name="Ans1"   Stretch="Fill" />
                 </Border>
-                <Border Name="b2" Grid.Column="0" Grid.Row="1">
-                    <Image Source="img/nigerniger.jpg" MouseDown="Ans2_MouseDown" Name="Ans2"  Width="200" Height="80" Stretch="Fill" />
+                <Border  Width="200" Height="80" BorderBrush="Red" Name="b2" Grid.Column="0" Grid.Row="1">
+                    <Image Source="img/nigerniger.jpg" MouseDown="Ans2_MouseDown" Name="Ans2"  Stretch="Fill" />
                 </Border>
-                <Border Name="b3" Grid.Column="1" Grid.Row="0">
-                    <Image Source="img/nigerniger.jpg" MouseDown="Ans3_MouseDown" Name="Ans3"  Width="200" Height="80" Stretch="Fill" />
+                <Border  Width="200" Height="80" BorderBrush="Red" Name="b3" Grid.Column="1" Grid.Row="0">
+                    <Image Source="img/nigerniger.jpg" MouseDown="Ans3_MouseDown" Name="Ans3"  Stretch="Fill" />
                 </Border>
-                <Border Name="b4" Grid.Column="1" Grid.Row="1">
-                    <Image Source="img/nigerniger.jpg" MouseDown="Ans4_MouseDown" Name="Ans4"  Width="200" Height="80" Stretch="Fill" />
+                <Border  Width="200" Height="80" BorderBrush="Red" Name="b4" Grid.Column="1" Grid.Row="1">
+                    <Image Source="img/nigerniger.jpg" MouseDown="Ans4_MouseDown" Name="Ans4"  Stretch="Fill" />
                 </Border>
             </Grid>
             <Grid Grid.Row="4" Grid.Column="0" Width="500">
