--- a/testus2/NapraviTest.xaml
+++ b/testus2/NapraviTest.xaml
@@ -29,7 +29,7 @@
         
         <TextBlock Grid.Row="0" Grid.Column="0" Text="Napravite test" FontSize="45" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White"/>
         
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="Izaberite zeljene oblasti" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" Name="SelectionTitle" Background="White"/>
+        <TextBlock Grid.Row="1" Grid.Column="0" Text="Izaberite zeljene oblasti" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" Name="SelectionTitle" Background="White" TextAlignment="Center"/>
         
         <Grid Grid.Row="2" Grid.Column="0">
             <Grid.ColumnDefinitions>
